[gd_scene load_steps=28 format=3 uid="uid://bmvl0mmvq2xrt"]

[ext_resource type="Script" uid="uid://b4bjbpkgyull3" path="res://scripts/editor/map_editor.gd" id="1_fxgqh"]
[ext_resource type="Script" uid="uid://bhfxbci4dpeyx" path="res://scripts/editor/camera_controller.gd" id="2_rwdrj"]
[ext_resource type="PackedScene" uid="uid://c1j0jj480jij5" path="res://scenes/editor/HexGrid.tscn" id="2_y6um0"]
[ext_resource type="PackedScene" uid="uid://bo6ei0t8ag4st" path="res://scenes/editor/GhostTile.tscn" id="3_cio15"]
[ext_resource type="Texture2D" uid="uid://fcjkvdb001w1" path="res://shaders/Sun.png" id="5_ww156"]
[ext_resource type="Script" uid="uid://cjyftpvgtwe1q" path="res://scripts/editor/ui.gd" id="7_0d0we"]
[ext_resource type="PackedScene" uid="uid://cp32jgyyj222g" path="res://scenes/editor/TileBrowser.tscn" id="7_y6um0"]
[ext_resource type="Shader" uid="uid://cl7qgdwc0tm2r" path="res://shaders/sky.gdshader" id="8_k0rgf"]
[ext_resource type="Script" uid="uid://dsmaugvoqml4p" path="res://scripts/editor/day_night_cycle.gd" id="10_sa2v6"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_k0rgf"]
load_path = "res://.godot/imported/Sun.png-008c5f7c4aaa013feca9a50a4e65fcef.s3tc.ctex"

[sub_resource type="Curve" id="Curve_ww156"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.13861385, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.7599704), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_3qj4f"]
curve = SubResource("Curve_ww156")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lp20a"]
noise_type = 2
seed = 8

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nowan"]
noise = SubResource("FastNoiseLite_lp20a")
seamless = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_bar3u"]
noise_type = 2
seed = 8

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7kbau"]
noise = SubResource("FastNoiseLite_bar3u")
seamless = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_i0grs"]
noise_type = 2
seed = 8

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vwj3y"]
noise = SubResource("FastNoiseLite_i0grs")
seamless = true

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dya56"]
load_path = "res://.godot/imported/shooting_star_sampler.png-2c06ef68af8cb9d0020913d70b7df60b.s3tc.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7xap6"]
shader = ExtResource("8_k0rgf")
shader_parameter/cloud_shape_sampler = SubResource("NoiseTexture2D_7kbau")
shader_parameter/cloud_noise_sampler = SubResource("NoiseTexture2D_nowan")
shader_parameter/cloud_curves = SubResource("CurveTexture_3qj4f")
shader_parameter/clouds_samples = 32
shader_parameter/shadow_sample = 4
shader_parameter/clouds_density = 0.40000000596048
shader_parameter/clouds_scale = 1.0000000074506001
shader_parameter/clouds_smoothness = 0.049999998882400004
shader_parameter/clouds_light_color = Color(0.22745098, 0.44705883, 1, 1)
shader_parameter/clouds_shadow_intensity = 8.0000001192096
shader_parameter/high_clouds_sampler = SubResource("NoiseTexture2D_vwj3y")
shader_parameter/high_clouds_density = 0.0
shader_parameter/top_color = Color(0.02745098, 0.101960786, 0.2509804, 1)
shader_parameter/bottom_color = Color(0.02745098, 0.101960786, 0.2509804, 1)
shader_parameter/sun_scatter = Color(0.1254902, 0.08627451, 0.37254903, 1)
shader_parameter/astro_tint = Color(1, 1, 1, 1)
shader_parameter/astro_sampler = SubResource("CompressedTexture2D_k0rgf")
shader_parameter/astro_scale = 6.0000000894072
shader_parameter/astro_intensity = 1.20000000298024
shader_parameter/stars_intensity = 5.0
shader_parameter/shooting_stars_intensity = 0.20000000298024
shader_parameter/shooting_star_sampler = SubResource("CompressedTexture2D_dya56")
shader_parameter/shooting_star_tint = Color(1, 0.6627451, 0.41960785, 1)

[sub_resource type="Sky" id="Sky_uek0w"]
sky_material = SubResource("ShaderMaterial_7xap6")

[sub_resource type="Environment" id="Environment_2588y"]
background_mode = 2
sky = SubResource("Sky_uek0w")
tonemap_mode = 2
glow_enabled = true
adjustment_enabled = true
adjustment_saturation = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ww156"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_texture = ExtResource("5_ww156")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_lp20a"]
material = SubResource("StandardMaterial3D_ww156")
size = Vector2(100, 100)

[sub_resource type="Animation" id="Animation_fbsng"]
resource_name = "DayNightCycle"
length = 1440.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/clouds_light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 420, 719.36664),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.22745098, 0.44705883, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/top_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 720),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.02745098, 0.101960786, 0.2509804, 1), Color(0.34901962, 0.5882353, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/bottom_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 300, 360, 716.8, 960, 1020, 1080),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.02745098, 0.101960786, 0.2509804, 1), Color(0.09803922, 0.101960786, 0.29803923, 1), Color(0.35190126, 0.19453514, 0.35293478, 1), Color(0, 0.32941177, 0.96862745, 1), Color(0.23921569, 0.32941177, 0.5529412, 1), Color(0.49803922, 0.36078432, 0.2509804, 1), Color(0.2764885, 0.18255815, 0.20034975, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/sun_scatter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 720),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.1254902, 0.08627451, 0.37254903, 1), Color(0.29803923, 0.29803923, 0.29803923, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/astro_tint")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 720),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.90588236, 0.7882353, 0.627451, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/stars_intensity")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 360, 1080),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [5.0, 0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/shooting_stars_intensity")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 360, 1080),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.20000000298024, 0.0, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/astro_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 720),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0000000894072, 3.0000000447036004]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/astro_intensity")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 720),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.20000000298024, 3.0]
}

[sub_resource type="Animation" id="Animation_6lp6s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/clouds_light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.22745098, 0.44705883, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/top_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.02745098, 0.101960786, 0.2509804, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/bottom_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.02745098, 0.101960786, 0.2509804, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/sun_scatter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.1254902, 0.08627451, 0.37254903, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/astro_tint")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/stars_intensity")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/shooting_stars_intensity")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.20000000298024]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/astro_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.0000000894072]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WorldEnvironment:environment:sky:sky_material:shader_parameter/astro_intensity")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.20000000298024]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhiv6"]
_data = {
&"DayNightCycle": SubResource("Animation_fbsng"),
&"RESET": SubResource("Animation_6lp6s")
}

[node name="MapEditor" type="Node3D" groups=["terrain_generator"]]
script = ExtResource("1_fxgqh")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot" groups=["main_camera"]]
script = ExtResource("2_rwdrj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2588y")

[node name="DayNightCycle" type="Node3D" parent="." node_paths=PackedStringArray("sun_pivot", "sun_light", "moon_pivot", "moon_mesh", "world_env", "animation_player")]
script = ExtResource("10_sa2v6")
sun_pivot = NodePath("SunPivot")
sun_light = NodePath("SunPivot/DirectionalLight3D")
moon_pivot = NodePath("MoonPivot")
moon_mesh = NodePath("MoonPivot/MoonMesh")
world_env = NodePath("../WorldEnvironment")
animation_player = NodePath("AnimationPlayer")
orbit_radius = 1000.0

[node name="SunPivot" type="Node3D" parent="DayNightCycle"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="DayNightCycle/SunPivot"]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="MoonPivot" type="Node3D" parent="DayNightCycle"]

[node name="MoonMesh" type="MeshInstance3D" parent="DayNightCycle/MoonPivot"]
mesh = SubResource("QuadMesh_lp20a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DayNightCycle"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_hhiv6")
}

[node name="Layers" type="Node3D" parent="."]

[node name="TerrainLayer" type="Node3D" parent="Layers"]

[node name="BuildingLayer" type="Node3D" parent="Layers"]

[node name="ResourceLayer" type="Node3D" parent="Layers"]

[node name="HexGrid" parent="." instance=ExtResource("2_y6um0")]

[node name="GhostTile" parent="." instance=ExtResource("3_cio15")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_0d0we")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="FoldableMap" type="FoldableContainer" parent="UI/VBoxContainer"]
layout_mode = 2
folded = true
title = "Map"
title_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/FoldableMap"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/FoldableMap/VBoxContainer"]
layout_mode = 2

[node name="MapNameLabel" type="Label" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="MapNameValue" type="Label" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/VBoxContainer/FoldableMap/VBoxContainer"]
layout_mode = 2

[node name="MapRadiusLabel" type="Label" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Radius"

[node name="MapRadiusValue" type="Label" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/VBoxContainer/FoldableMap/VBoxContainer"]
layout_mode = 2

[node name="MapGridLabel" type="Label" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Grid"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MapGridQValue" type="Label" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="MapGridRValue" type="Label" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="HBoxContainer4" type="HBoxContainer" parent="UI/VBoxContainer/FoldableMap/VBoxContainer"]
layout_mode = 2

[node name="SaveMapButton" type="Button" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="CloseMapButton" type="Button" parent="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="FoldableMinimap" type="FoldableContainer" parent="UI/VBoxContainer"]
layout_mode = 2
folded = true
title = "Minimap"
title_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/FoldableMinimap"]
visible = false
layout_mode = 2

[node name="MinimapPanel" type="Panel" parent="UI/VBoxContainer/FoldableMinimap/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
metadata/_tab_index = 0

[node name="FoldableCamera" type="FoldableContainer" parent="UI/VBoxContainer"]
layout_mode = 2
folded = true
title = "Camera"
title_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/FoldableCamera"]
visible = false
layout_mode = 2

[node name="HBoxContainerX" type="HBoxContainer" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer"]
layout_mode = 2

[node name="XCameraLabel" type="Label" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer/HBoxContainerX"]
layout_mode = 2
size_flags_horizontal = 3
text = "x"

[node name="XCameraValue" type="Label" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer/HBoxContainerX"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="HBoxContainerZ" type="HBoxContainer" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer"]
layout_mode = 2

[node name="ZCameraLabel" type="Label" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer/HBoxContainerZ"]
layout_mode = 2
size_flags_horizontal = 3
text = "z"

[node name="ZCameraValue" type="Label" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer/HBoxContainerZ"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="HBoxContainerY" type="HBoxContainer" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer"]
layout_mode = 2

[node name="YCameraLabel" type="Label" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer/HBoxContainerY"]
layout_mode = 2
size_flags_horizontal = 3
text = "y"

[node name="YCameraValue" type="Label" parent="UI/VBoxContainer/FoldableCamera/VBoxContainer/HBoxContainerY"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="FoldableDayTime" type="FoldableContainer" parent="UI/VBoxContainer"]
layout_mode = 2
folded = true
title = "Day Time"
title_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/FoldableDayTime"]
visible = false
layout_mode = 2

[node name="HBoxContainerMoment" type="HBoxContainer" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer"]
layout_mode = 2

[node name="MomentLabel" type="Label" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer/HBoxContainerMoment"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moment"

[node name="MomentValue" type="Label" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer/HBoxContainerMoment"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="HBoxContainerTime" type="HBoxContainer" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer/HBoxContainerTime"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time"

[node name="TimeValue" type="Label" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer/HBoxContainerTime"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="HBoxContainerSpeed" type="HBoxContainer" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer/HBoxContainerSpeed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed"

[node name="SpeedValue" type="SpinBox" parent="UI/VBoxContainer/FoldableDayTime/VBoxContainer/HBoxContainerSpeed"]
layout_mode = 2
size_flags_horizontal = 3
value = 1.0
rounded = true

[node name="FoldableTiles" type="FoldableContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
title = "Tiles"
title_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/FoldableTiles"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/FoldableTiles/VBoxContainer"]
layout_mode = 2

[node name="TileLayerLabel" type="Label" parent="UI/VBoxContainer/FoldableTiles/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Layer"

[node name="TileLayerValue" type="Label" parent="UI/VBoxContainer/FoldableTiles/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="LayerTabBar" type="TabBar" parent="UI/VBoxContainer/FoldableTiles/VBoxContainer"]
layout_mode = 2
current_tab = 0
tab_count = 3
tab_0/title = "Terrain"
tab_1/title = "Buildings"
tab_2/title = "Decorations"

[node name="TileBrowser" parent="UI/VBoxContainer/FoldableTiles/VBoxContainer" instance=ExtResource("7_y6um0")]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer4/SaveMapButton" to="." method="_on_save_map_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/FoldableMap/VBoxContainer/HBoxContainer4/CloseMapButton" to="." method="_on_close_map_button_pressed"]
[connection signal="value_changed" from="UI/VBoxContainer/FoldableDayTime/VBoxContainer/HBoxContainerSpeed/SpeedValue" to="DayNightCycle" method="_on_speed_value_value_changed"]
[connection signal="tab_changed" from="UI/VBoxContainer/FoldableTiles/VBoxContainer/LayerTabBar" to="UI" method="_on_layer_tab_bar_tab_changed"]
